FACES-1714 Develop Liferay Faces Showcase (added use-case for alloy:panel)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -35,6 +35,7 @@ panel_alloy_accordion=general:accordion.xhtml|data-model:accordion.xhtml,Accordi
 panel_alloy_dialog=general:dialog.xhtml,DialogModelBean.java,DialogBackingBean.java
 panel_alloy_field=general:field.xhtml,FieldBackingBean.java|message-styling:field.xhtml,FieldBackingBean.java
 panel_alloy_fieldset=general:fieldset.xhtml
+panel_alloy_panel:general:panel.xhtml
 panel_alloy_panelGrid=general:panelGrid.xhtml
 panel_alloy_panelGroup=general:panelGroup.xhtml
 panel_alloy_popover=general:popover.xhtml,PopoverModelBean.java,PopoverBackingBean.java
