--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -231,6 +231,10 @@ alloy-outputtooltip-general=The component *must be associated* with another comp
 alloy-outputtooltip-general-example-1=Specifying tooltip text via the [vdldoc:alloy:outputTooltip:value] attribute
 alloy-outputtooltip-general-example-2=Specifying tooltip text via the associated component's `title` attribute
 alloy-outputtooltip-general-example-3=Specifying children, [vdldoc:alloy:outputTooltip:headerText], [vdldoc:alloy:outputTooltip:opacity]=`0.5`, [vdldoc:alloy:outputTooltip:position]=`bottom`, and [vdldoc:alloy:outputTooltip:styleClass]=`tooltip-help`
+alloy-panel=[javadoc:com.liferay.faces.alloy.component.panel.Panel] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element with *three* child `&lt;div&gt;` elements (one for header, body, and footer). Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+alloy-panel-general=The component is generally used to specify a *header* and/or *footer* in order to decorate child content.
+alloy-panel-general-example-1=Specifying the [vdldoc:alloy:panel:headerText] and [vdldoc:alloy:panel:footerText] attributes
+alloy-panel-general-example-2=Specifying the `header` and `footer` facets
 alloy-panelgrid=[javadoc:com.liferay.faces.alloy.component.panelgrid.PanelGrid] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;table&gt;` element to layout its children in a tabular grid. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGrid], it supports all the features of [vdldoc:h:panelGrid].
 alloy-panelgrid-general=The [vdldoc:alloy:panelGrid:columns] attribute specifies how many table columns are rendered. A new table row will be rendered if the number of children exceeds the number of columns.
 alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGroup] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;span&gt;` or a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -336,6 +340,7 @@ c-if-general=
 c-set=The JSF runtime includes [vdldoc:c:set] which is a Facelet [javadoc:javax.faces.view.facelets.TagHandler] implementation of the JSTL `&lt;c:set&gt;` JSP tag.
 c-set-general=
 cancel=Cancel
+child=Child
 choose-files=Choose Files
 clear-the-value-of-the-hidden-input=Clear the value of the hidden input
 click-here-to-execute-the-click-event-callback=Click here to execute the click event callback
@@ -443,6 +448,7 @@ favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
 filter=Filter
+footer=Footer
 highlight=Highlight
 first-name=First Name
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
@@ -451,6 +457,7 @@ h-inputfile=[javadoc:javax.faces.component.html.HtmlInputFile] is a [javadoc:jav
 h-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
 h-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
 has-compatibility-issues-with-jsf-22-file-upload-for-more-information-see-this=has compatibility issues with JSF 2.2 file upload. For more information see this
+header=Header
 header-text=Header Text
 hidden-field=Hidden Field
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
