FACES-1901 Develop alloy:tab and alloy:tabView components (changed label attribute to headerText) FACES-1714 Develop Liferay Faces Showcase (made usage of headerText consistent across alloy:accordion, alloy:panel, and alloy:tabView)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -4,9 +4,9 @@ agree=Agree
 are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 alloy-accordion=[javadoc:com.liferay.faces.alloy.component.Accordion] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders child tabs either statically or dynamically.
 alloy-accordion-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:accordion:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:accordion:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
-alloy-accordion-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags. Tab headers can be specified with a *header facet* or *header text* can be styled with CSS.
-alloy-accordion-general-example-1=Specifying a *header facet* with an image and text
-alloy-accordion-general-example-2=Specifying *header text* and styling via CSS
+alloy-accordion-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags. Tab headers can be specified via the `header` facet or [vdldoc:alloy:tab:headerText] attribute and can be styled with CSS.
+alloy-accordion-general-example-1=Specifying the `header` facet
+alloy-accordion-general-example-2=Specifying the [vdldoc:alloy:tab:headerText] attribute
 alloy-accordion-multiple=When [vdldoc:alloy:accordion:multiple]=`true`, multiple tabs can be expanded. <br /><br />*JavaScript API:*<ul><li>`collapseAll()` causes all of the accordion tabs to close</li><li>`expandAll()` causes all of the accordion tabs to open</li></ul>
 alloy-accordion-selected-tab=The [vdldoc:alloy:accordion:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
 alloy-accordion-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabCollapse` or `tabExpand` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tab.TabCollapseEvent] or [javadoc:com.liferay.faces.alloy.component.tab.TabExpandEvent] respectively. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:accordion:tabCollapseListener] and [vdldoc:alloy:accordion:tabExpandListener] attributes.
@@ -233,8 +233,8 @@ alloy-outputtooltip-general-example-2=Specifying tooltip text via the associated
 alloy-outputtooltip-general-example-3=Specifying children, [vdldoc:alloy:outputTooltip:headerText], [vdldoc:alloy:outputTooltip:opacity]=`0.5`, [vdldoc:alloy:outputTooltip:position]=`bottom`, and [vdldoc:alloy:outputTooltip:styleClass]=`tooltip-help`
 alloy-panel=[javadoc:com.liferay.faces.alloy.component.panel.Panel] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element with *three* child `&lt;div&gt;` elements (one for header, body, and footer). Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-panel-general=The component is generally used to specify a *header* and/or *footer* in order to decorate child content.
-alloy-panel-general-example-1=Specifying the [vdldoc:alloy:panel:headerText] and [vdldoc:alloy:panel:footerText] attributes
-alloy-panel-general-example-2=Specifying the `header` and `footer` facets
+alloy-panel-general-example-1=Specifying the `header` and `footer` facets
+alloy-panel-general-example-2=Specifying the [vdldoc:alloy:panel:headerText] and [vdldoc:alloy:panel:footerText] attributes
 alloy-panelgrid=[javadoc:com.liferay.faces.alloy.component.panelgrid.PanelGrid] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;table&gt;` element to layout its children in a tabular grid. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGrid], it supports all the features of [vdldoc:h:panelGrid].
 alloy-panelgrid-general=The [vdldoc:alloy:panelGrid:columns] attribute specifies how many table columns are rendered. A new table row will be rendered if the number of children exceeds the number of columns.
 alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGroup] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;span&gt;` or a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -310,7 +310,9 @@ alloy-selectthumbrating=[javadoc:com.liferay.faces.alloy.component.selectthumbra
 alloy-selectthumbrating-general=The [vdldoc:alloy:thumbRating:value] of the component is typically of type [javadoc:java.lang.Boolean].
 alloy-selectthumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 alloy-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders tabs either statically or dynamically.
-alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
+alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.  Tab headers can be specified via the `header` facet or [vdldoc:alloy:tab:headerText] attribute and can be styled with CSS.
+alloy-tabview-general-example-1=Specifying the `header` facet
+alloy-tabview-general-example-2=Specifying the [vdldoc:alloy:tabView:headerText] attribute
 alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 alloy-tabview-dynamic-tabs=Tabs can be rendered *dynamically* by setting the [vdldoc:alloy:tab:rendered] attribute of each [vdldoc:alloy:tab] child. 
 alloy-tabview-selected-tab=The [vdldoc:alloy:tabView:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
