FACES-1983 Develop liferay-faces-reslib.jar artifact (by moving resources out of liferay-faces-alloy)

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
 		<module>bridge-impl</module>
 		<module>cdi-compat</module>
 		<module>portal</module>
+		<module>reslib</module>
 		<module>demos</module>
 		<module>issues</module>
 		<module>support</module>
