FACES-1984 added portal:permissionsURL tag

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -506,6 +506,13 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
+portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.PermissionsURL] is a [javadoc:javax.faces.component.UIData] component that provides the ability to get a permissionsURL using the PermissionsURLTag.
+portal-permissionsurl-general=Simply specify a [vdldoc:portal:permissionsURL:resourcePrimKey] with the portlet's primary key for permissions to generate a url to access the top level permissions the user has for the entire portlet.
+portal-permissionsurl-general-example-1=Default [vdldoc:portal:permissionsURL:roleTypes]
+portal-permissionsurl-general-example-2=Imported [vdldoc:portal:permissionsURL:roleTypes]
+portal-permissionsurl-top-level=Generates a url for adjusting top level actions which are permissions for an entire model entity (or a whole table).  Use [vdldoc:portal:permissionsURL:modelResource] to specify the model, and a [vdldoc:portal:permissionsURL:resourcePrimKey] to specify the scope group id to generate a url to access the permissions the user has for those model entities (for all the rows in that model's table).
+portal-permissionsurl-resource=Generates a url for adjusting resource actions which are permissions for an individual entity (or a specific row).  Use [vdldoc:portal:permissionsURL:modelResource] to specify the model, and a [vdldoc:portal:permissionsURL:resourcePrimKey] to specify a single entity by its id to generate a url to access the permissions the user has for that individual entity.
+portal-permissionsurl-var-attribute=The [vdldoc:portal:permissionsURL:var] attribute of the [vdldoc:portal:permissionsURL] introduces the url into the expression language.  The resulting url is shown below.
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
 portlet-namespace=[javadoc:com.liferay.faces.bridge.component.PortletNamespace] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get the portlet namespace.
