FACES-1984 Develop portal:permissionsURL component FACES-1714 Develop Liferay Faces Showcase (added use-case for portal:permissionsURL) FACES-1898 Develop alloy:dialog and alloy:popover components (added height and width YUI js attributes, added span with class="alloy-overlay-title" in the header and made background-color of the header to be gray in order to be consistent with other Liferay Faces components that have headers) FACES-1982 Develop alloy:panel component (made text of header bold in order to be consistent with other Liferay Faces components that have headers)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -506,6 +506,15 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
+portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.PermissionsURL] is a [javadoc:javax.faces.component.UIOutput] component that generates a URL pointing to the Liferay Portal Permissions UI. If the [vdldoc:portal:permissionsURL:var] attribute is present, the component introduces a variable into the EL. Otherwise, the URL is written to the response.
+portal-permissionsurl-general=Access the *Portlet Resource Permissions* by specifying the primary key of a portlet via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute, and optionally specifying [vdldoc:portal:permissionsURL:roleTypes] in order to control which roles are displayed in the Liferay Portal Permissions UI.
+portal-permissionsurl-general-example-1=Introducing a [vdldoc:portal:permissionsURL:var] into the EL with default role types (Guest, Owner, Power User, Site Member, User)
+portal-permissionsurl-general-example-2=Output directly to the response with specific role types (Guest, Owner, Power User, User)
+portal-permissionsurl-note=*Note*: Liferay Portal has *three types of resources*, each having associated permissions:<ol><li>*Portlet Resource*: Permissions associated with the UI of the portlet, such as permission to `VIEW` the portlet.</li><li>*Top-Level Model Resource*: Permissions associated with the database entity itself, such as permission to `ADD` a row.</li><li>*Row-Level Model Resource*: Permissions associated with individual rows of the database entity, such as permission to `UPDATE` a row.</li></ol>
+portal-permissionsurl-rowlevel=Access the *Row-Level Model Resource Permissions* by specifying the Fully-Qualified Class Name (FQCN) of the ServiceBuilder model via the [vdldoc:portal:permissionsURL:modelResource] attribute and the *primary key of the row* via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute.
+portal-permissionsurl-toplevel=Access the *Top-Level Model Resource Permissions* by specifying the Fully-Qualified Class Name (FQCN) of the ServiceBuilder model via the [vdldoc:portal:permissionsURL:modelResource] attribute and the `groupId` (the ID of the Liferay Portal Site) via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute.
+portal-permissionsurl-windowstate=The [vdldoc:portal:permissionsURL:windowState] attribute is used to control how the Liferay Portal Permissions UI should be displayed (typically in an `&lt;iframe&gt;` dialog). Valid values include: `maximized`, `pop_up`, and `exclusive`. The default value is `maximized`.
+portal-permissionsurl-windowstate-example-1=Specifying `windowState="pop_up"`
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
 portlet-namespace=[javadoc:com.liferay.faces.bridge.component.PortletNamespace] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get the portlet namespace.
@@ -528,6 +537,7 @@ required=Required
 required-message=This is a required field
 resource=Resource
 right-to-left=Right-To-Left
+rowlevel=Row-Level
 select=Select
 selection=Selection
 selected-tab=Selected Tab
@@ -565,6 +575,7 @@ text-box-1=Text Box #1
 text-box-2=Text Box #2
 to-param-page=To Param page
 tooltip-value=Tooltip Value
+toplevel=Top-Level
 ui-component=The JSF runtime includes the [vdldoc:ui:component] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
 ui-component-general=
 ui-composition=The JSF runtime includes the [vdldoc:ui:composition] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
@@ -605,5 +616,6 @@ view-params=View Params
 vertical-layout=Vertical Layout
 warning=Warning
 when-was-the-us-declaration-of-independence-signed=When was the US Declaration of Independence signed?
-which-of-the-following-dates-are-in-the-18th-century=Which of the following dates are in the 18th century? 
+which-of-the-following-dates-are-in-the-18th-century=Which of the following dates are in the 18th century?
+windowstate=Window State 
 wizard=Wizard
