FACES-1714 Develop Liferay Faces Showcase (moved LiferayBenefit DTO and LiferayBenefitService to separate JAR so that the service can be shared between managed-beans in both showcase-webapp and showcase-portlet)

--- a/demos/showcase/pom.xml
+++ b/demos/showcase/pom.xml
@@ -13,6 +13,7 @@
 	<name>Liferay Faces Showcase Demos</name>
 
 	<modules>
+		<module>showcase-common</module>
 		<module>showcase-webapp</module>
 		<module>showcase-portlet</module>
 	</modules>
