FACES-1714 Develop Liferay Faces Showcase (moved LiferayBenefit DTO and LiferayBenefitService to separate JAR so that the service can be shared between managed-beans in both showcase-webapp and showcase-portlet)

--- a/demos/showcase/showcase-portlet/pom.xml
+++ b/demos/showcase/showcase-portlet/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
 		<artifactId>liferay-faces-showcase-demos</artifactId>
 		<version>3.2.5-ga6-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>showcase-portlet</artifactId>
 	<packaging>war</packaging>
@@ -31,11 +32,11 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
+			<artifactId>javax.servlet.jsp-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.portlet</groupId>
@@ -61,13 +62,18 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.liferay.faces.demos</groupId>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>showcase-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>showcase-webapp</artifactId>
 			<version>${project.version}</version>
 			<type>war</type>
 		</dependency>
-				<dependency>
-			<groupId>com.liferay.faces.demos</groupId>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>showcase-webapp</artifactId>
 			<version>${project.version}</version>
 			<type>warpath</type>
