FACES-1985 Develop portal:navBar, portal:nav, and portal:navItem components FACES-1984 Develop portal:permissionsURL component (refactored to use new abstract PortalTagRenderer parent class) FACES-1714 Develop Liferay Faces Showcase (added use-cases for portal:navBar and portal:nav)

--- a/demos/showcase/showcase-portlet/src/main/resources/portal.properties
+++ b/demos/showcase/showcase-portlet/src/main/resources/portal.properties
@@ -1,1 +1,3 @@
 portal_portal_permissionsURL=general:permissionsURL.xhtml,PermissionsURLModelBean.java|toplevel:permissionsURL.xhtml|rowlevel:permissionsURL.xhtml|windowstate:permissionsURL.xhtml
+portal_portal_nav=general:nav.xhtml|data-model:nav.xhtml,NavModelBean.java
+portal_portal_navBar=general:navBar.xhtml
