--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -506,7 +506,14 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
-portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.PermissionsURL] is a [javadoc:javax.faces.component.UIOutput] component that generates a URL pointing to the Liferay Portal Permissions UI. If the [vdldoc:portal:permissionsURL:var] attribute is present, the component introduces a variable into the EL. Otherwise, the URL is written to the response.
+portal-nav=[javadoc:com.liferay.faces.portal.component.nav.Nav] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `&lt;ul&gt;...&lt;/ul&gt` (unordered) list. It is designed to be used in conjunction with [vdldoc:portal:navItem] child component tags.
+portal-nav-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render list items *dynamically* when the [vdldoc:portal:navItem] content is set via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:portal:navItem:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+portal-nav-general=Child [vdldoc:portal:navItem] child component tags are rendered as `&lt;li&gt;...&lt;/li&gt;` (list item) elements.
+portal-nav-general-example-1=Default styling
+portal-nav-general-example-2=Specifying `styleClass="nav-list"` and list item hyperlinked icons
+portal-navbar=[javadoc:com.liferay.faces.portal.component.navbar.NavBar] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;...&lt;/div&gt;` element. It is designed to be used in conjunction with [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.
+portal-navbar-general=Specify a *navigation-bar* of links using [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.
+portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.permissionsurl.PermissionsURL] is a [javadoc:javax.faces.component.UIOutput] component that generates a URL pointing to the Liferay Portal Permissions UI. If the [vdldoc:portal:permissionsURL:var] attribute is present, the component introduces a variable into the EL. Otherwise, the URL is written to the response.
 portal-permissionsurl-general=Access the *Portlet Resource Permissions* by specifying the primary key of a portlet via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute, and optionally specifying [vdldoc:portal:permissionsURL:roleTypes] in order to control which roles are displayed in the Liferay Portal Permissions UI.
 portal-permissionsurl-general-example-1=Introducing a [vdldoc:portal:permissionsURL:var] into the EL with default role types (Guest, Owner, Power User, Site Member, User)
 portal-permissionsurl-general-example-2=Output directly to the response with specific role types (Guest, Owner, Power User, User)
