FACES-1714 Develop Liferay Faces Showcase (moved common classes from showcase-webapp to showcase-common and added ViewParamUtil)

--- a/demos/showcase/showcase-common/pom.xml
+++ b/demos/showcase/showcase-common/pom.xml
@@ -14,8 +14,17 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>javax.faces-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.liferay.faces</groupId>
+			<artifactId>liferay-faces-util</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -29,6 +38,21 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.java</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
