FACES-1714 Develop Liferay Faces Showcase (exclude liferay-faces-reslib.jar dependency in showcase-portlet)

--- a/demos/showcase/showcase-portlet/pom.xml
+++ b/demos/showcase/showcase-portlet/pom.xml
@@ -71,6 +71,12 @@
 			<artifactId>showcase-webapp</artifactId>
 			<version>${project.version}</version>
 			<type>war</type>
+			<exclusions>
+				<exclusion>
+					<groupId>com.liferay.faces</groupId>
+					<artifactId>liferay-faces-reslib</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
