--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -10,6 +10,22 @@
 	<artifactId>liferay-faces-portal</artifactId>
 	<name>Liferay Faces Portal</name>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>yuicompressor-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compress</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.el</groupId>
@@ -52,8 +68,78 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
-	
+
 	<profiles>
+		<profile>
+			<id>transform</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>xml-maven-plugin</artifactId>
+						<version>1.0</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>transform</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<transformationSets>
+								<transformationSet>
+									<dir>${liferay.app.server.tld.portal.dir}</dir>
+									<outputDir>${project.build.directory}/transform</outputDir>
+									<includes>
+										<include>liferay-ui.tld</include>
+									</includes>
+									<fileMappers>
+										<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
+											<pattern>.tld</pattern>
+											<replacement>-ext.xml</replacement>
+										</fileMapper>
+									</fileMappers>
+									<stylesheet>src/main/resources/META-INF/tld2taglib.xsl</stylesheet>
+									<outputProperties>
+										<outputProperty>
+											<name>indent</name>
+											<value>yes</value>
+										</outputProperty>
+									</outputProperties>
+								</transformationSet>
+								<transformationSet>
+									<dir>${liferay.app.server.tld.portal.dir}</dir>
+									<outputDir>${project.build.directory}/transform</outputDir>
+									<includes>
+										<include>liferay-ui.tld</include>
+									</includes>
+									<fileMappers>
+										<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
+											<pattern>.tld</pattern>
+											<replacement>.java</replacement>
+										</fileMapper>
+									</fileMappers>
+									<stylesheet>src/main/resources/META-INF/tld2java.xsl</stylesheet>
+									<outputProperties>
+										<outputProperty>
+											<name>indent</name>
+											<value>yes</value>
+										</outputProperty>
+									</outputProperties>
+								</transformationSet>
+							</transformationSets>
+						</configuration>
+						<dependencies>
+							<dependency>
+								<groupId>net.sf.saxon</groupId>
+								<artifactId>saxon</artifactId>
+								<version>8.7</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>generate-portal</id>
 			<build>
